--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,14 +1,18 @@
 FROM alpine:latest
 
-RUN apk add --no-cache python3 py3-pip 
-
-RUN pip3 install networkx
-RUN pip3 install fastdtw
-RUN pip3 install gensim==3.8.1
+RUN apk add --no-cache bash
 
 RUN apk add --no-cache git
 RUN git clone https://github.com/MrHosse/GraphEmbeddingFramework.git embFW
-WORKDIR /embFW/run
-RUN pip3 install .
+WORKDIR /embFW
+RUN git submodule init
+RUN git submodule update
+
+RUN apk add --no-cache python3 py3-pip 
+WORKDIR /embFW
+RUN pip3 install networkx
+RUN pip3 install fastdtw
+RUN pip3 install gensim==3.8.1
+RUN pip3 install ./run
 
 ENTRYPOINT tail -f /dev/null
