--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -3,7 +3,7 @@ FROM alpine:latest
 RUN apk add --no-cache bash
 
 RUN apk add --no-cache git
-RUN git clone https://github.com/MrHosse/GraphEmbeddingFramework.git gra_emb_fw
+RUN git clone -b docker --single-branch https://github.com/MrHosse/GraphEmbeddingFramework.git gra_emb_fw
 WORKDIR /gra_emb_fw
 RUN git submodule init
 RUN git submodule update
