--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "run"]
 	path = run
 	url = https://github.com/thobl/run.git
+[submodule "embedding/snap"]
+	path = embedding/snap
+	url = https://github.com/snap-stanford/snap.git
