--- a/embedding/spring/config.json
+++ b/embedding/spring/config.json
@@ -1,3 +1,12 @@
 {
-    
+    "pos": [],
+    "k": [],
+    "fixed": [],
+    "iterations": [],
+    "threshold": [],
+    "weight": [],
+    "scale": [],
+    "center": [],
+    "dim": [2,3,4,5],
+    "seed": []
 }
