--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,8 +5,12 @@ ARG GROUP_ID
 
 RUN apk add --no-cache bash
 RUN apk add --no-cache git
-RUN apk add --no-cache python3 py3-pip
-RUN apk add --no-cache git g++ cmake make
+RUN apk add --no-cache python3 py3-pip python3-dev
+RUN apk add --no-cache git g++ cmake make libstdc++ libgcc libgomp
+#RUN apk add --no-cache R R-dev linux-headers freetype-dev
+#RUN R -e 'install.packages(c("dplyr", "plotly"), repos="https://cloud.r-project.org/")'
+#RUN R -e 'install.packages(c("tidyverse"), repos="https://cloud.r-project.org/")'
+#RUN Rscript R/helper/load_dependencies.R
 
 # add newuser and give him needed permissions
 RUN addgroup -g $GROUP_ID newgroup
@@ -19,7 +23,7 @@ RUN chmod 755 /gra_emb_fw
 USER newuser
 
 # clone the repository and initialize the submoduls
-RUN git clone -b docker --single-branch https://github.com/MrHosse/GraphEmbeddingFramework.git /gra_emb_fw
+RUN git clone -b add-docker --single-branch https://github.com/MrHosse/GraphEmbeddingFramework.git /gra_emb_fw
 WORKDIR /gra_emb_fw
 RUN git submodule init
 RUN git submodule update
@@ -27,17 +31,21 @@ RUN git submodule update
 # build cpp executables
 WORKDIR /gra_emb_fw/embedding/verse/verse_exe/src
 RUN make
-#WORKDIR /gra_emb_fw/embedding/snap/examples
-#RUN make all
+WORKDIR /gra_emb_fw/embedding/snap/examples
+RUN make -C node2vec
 
 WORKDIR /gra_emb_fw
 # install python packages
 RUN pip3 install networkx
-# RUN pip3 install gensim==3.8.1
+RUN pip3 install pandas
+
 RUN pip3 install ./run
-# WORKDIR /gra_emb_fw/embedding/struc2vec/struc2vec_exe
-# RUN pip install -r ./requirements.txt
+
+WORKDIR /gra_emb_fw/embedding/struc2vec/struc2vec_exe
+RUN pip install -r ./requirements.txt
 WORKDIR /gra_emb_fw/embedding/verse/verse_exe/python
 RUN pip install -r ./requirements.txt
+
+WORKDIR /gra_emb_fw
 
 ENTRYPOINT tail -f /dev/null
