Fixed compilation issues with node2vec.

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -32,9 +32,14 @@ RUN pip3 install pandas
 # install run
 RUN pip3 install ./run
 
-# TODO: fix node2vec
-# WORKDIR /gra_emb_fw/embedding/snap/examples
-# RUN make -C node2vec
+# Apply patch to fix compilation issues with node2vec
+WORKDIR /gra_emb_fw/embedding/snap
+COPY docker_changes.patch .
+RUN git apply docker_changes.patch
+
+# Compile node2vec
+WORKDIR /gra_emb_fw/embedding/snap/examples
+RUN make -C node2vec
 
 # install python packages necessary for struc2vec
 WORKDIR /gra_emb_fw/embedding/struc2vec/struc2vec_exe
